--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2871,62 +2871,6 @@ section.lazy-placeholder:after {
 .cid-rDhR5s1IRp H1 {
   text-align: center;
 }
-.cid-rDhVdsZrBO {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-rDhVdsZrBO .mbr-section-subtitle {
-  color: #767676;
-  text-align: center;
-  font-weight: 300;
-}
-.cid-rDhVdsZrBO .step {
-  width: 72px;
-  height: 72px;
-  font-size: 36px;
-  border-radius: 50%;
-  border: 2px solid #efefef;
-  padding-bottom: 0;
-}
-@media (min-width: 768px) {
-  .cid-rDhVdsZrBO .separline .step-wrapper {
-    position: relative;
-  }
-  .cid-rDhVdsZrBO .separline .step-wrapper:before,
-  .cid-rDhVdsZrBO .separline .step-wrapper:after {
-    top: 38px;
-    position: absolute;
-    content: "";
-    height: 2px;
-    width: calc(50% + 15px - 36px - 8px);
-    background-color: #efefef;
-  }
-  .cid-rDhVdsZrBO .separline .step-wrapper:before {
-    left: -15px;
-  }
-  .cid-rDhVdsZrBO .separline .step-wrapper:after {
-    left: calc(50% + 8px + 36px);
-  }
-  .cid-rDhVdsZrBO .separline.last-child .step-wrapper:after,
-  .cid-rDhVdsZrBO .separline:nth-child(3n) .step-wrapper:after,
-  .cid-rDhVdsZrBO .separline:nth-child(3n+1) .step-wrapper:before {
-    background: none;
-  }
-}
-@media (max-width: 767px) {
-  .cid-rDhVdsZrBO .card:not(.last-child) {
-    padding-bottom: 1.5rem;
-  }
-}
-.cid-rDhVpw21Hc {
-  padding-top: 105px;
-  padding-bottom: 75px;
-  background-image: url("../../../assets/images/iot-environmental-1440x900.png");
-}
-.cid-rDhVpw21Hc H1 {
-  text-align: center;
-}
 .cid-rDhVbwTRdf {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -2986,77 +2930,19 @@ section.lazy-placeholder:after {
     padding-bottom: 2rem;
   }
 }
-.cid-rDhV7Xb8wH {
+.cid-rDoouwrEXU {
+  background: #232323;
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #ffffff;
+  background: linear-gradient(45deg, #232323, #232323);
 }
-.cid-rDhV7Xb8wH .progress {
-  width: 100%;
+.cid-rDoouwrEXU .video-block {
+  margin: auto;
 }
-.cid-rDhV7Xb8wH progress {
-  height: 8px;
-}
-.cid-rDhV7Xb8wH h3 {
-  text-align: center;
-  font-weight: 300;
-}
-.cid-rDhV7Xb8wH .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rDhV7Xb8wH .progress_value {
-  position: relative;
-}
-.cid-rDhV7Xb8wH .progress_elements {
-  margin: 0 auto;
-}
-.cid-rDhV7Xb8wH .title-wrap {
-  display: flex;
-  justify-content: space-between;
-  -webkit-justify-content: space-between;
-}
-.cid-rDhV7Xb8wH .progress1 .progressbar-number:before,
-.cid-rDhV7Xb8wH .progress2 .progressbar-number:before,
-.cid-rDhV7Xb8wH .progress3 .progressbar-number:before,
-.cid-rDhV7Xb8wH .progress4 .progressbar-number:before {
-  position: absolute;
-  right: 15px;
-  top: 0;
-}
-.cid-rDhV7Xb8wH progress[value]::-webkit-progress-bar {
-  background: rgba(206, 206, 206, 0.4);
-}
-.cid-rDhV7Xb8wH progress::-webkit-progress-value {
-  background: #149dcc;
-}
-.cid-rDhV7Xb8wH progress[value]::-moz-progress-bar {
-  background: #149dcc;
-}
-.cid-rDhV7Xb8wH progress::-ms-fill {
-  background: #149dcc;
-}
-.cid-rDhV7Xb8wH .progress1 .progressbar-number:before {
-  content: '70';
-}
-.cid-rDhV7Xb8wH .progress2 .progressbar-number:before {
-  content: '80';
-}
-.cid-rDhV7Xb8wH .progress3 .progressbar-number:before {
-  content: '90';
-}
-.cid-rDhV7Xb8wH .progress4 .progressbar-number:before {
-  content: '100';
-}
-.cid-rDhV7Xb8wH .progress-primary {
-  background: rgba(206, 206, 206, 0.4);
-  border: none;
-  outline: none;
-}
-.cid-rDhV7Xb8wH .progress-primary::-webkit-progress-bar {
-  background: rgba(206, 206, 206, 0.4);
-}
-.cid-rDhV7Xb8wH .progress_value span {
-  padding-left: 30px;
+@media (max-width: 768px) {
+  .cid-rDoouwrEXU .video-block {
+    width: 100% !important;
+  }
 }
 .cid-rDhRnLQupG {
   padding-top: 75px;
@@ -3124,4 +3010,396 @@ section.lazy-placeholder:after {
     justify-content: center;
     -webkit-justify-content: center;
   }
+}
+.cid-rD0pXjj7qF .navbar {
+  padding: .5rem 0;
+  background: #232323;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rD0pXjj7qF .navbar-dropdown.bg-color.transparent.opened {
+  background: #232323;
+}
+.cid-rD0pXjj7qF a {
+  font-style: normal;
+}
+.cid-rD0pXjj7qF .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rD0pXjj7qF .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rD0pXjj7qF .nav-item:focus,
+.cid-rD0pXjj7qF .nav-link:focus {
+  outline: none;
+}
+.cid-rD0pXjj7qF .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rD0pXjj7qF .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rD0pXjj7qF .menu-logo {
+  margin-right: auto;
+}
+.cid-rD0pXjj7qF .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rD0pXjj7qF .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rD0pXjj7qF .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rD0pXjj7qF .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rD0pXjj7qF .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rD0pXjj7qF .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rD0pXjj7qF .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rD0pXjj7qF .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rD0pXjj7qF .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rD0pXjj7qF .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rD0pXjj7qF .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rD0pXjj7qF .dropdown .dropdown-menu {
+  background: #232323;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rD0pXjj7qF .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rD0pXjj7qF .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rD0pXjj7qF .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rD0pXjj7qF .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rD0pXjj7qF .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rD0pXjj7qF .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rD0pXjj7qF .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rD0pXjj7qF .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rD0pXjj7qF .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rD0pXjj7qF .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rD0pXjj7qF .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rD0pXjj7qF button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rD0pXjj7qF button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rD0pXjj7qF button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #232323;
+}
+.cid-rD0pXjj7qF button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rD0pXjj7qF button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rD0pXjj7qF button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rD0pXjj7qF button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rD0pXjj7qF nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rD0pXjj7qF nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rD0pXjj7qF nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rD0pXjj7qF nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rD0pXjj7qF .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rD0pXjj7qF .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rD0pXjj7qF .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rD0pXjj7qF .collapsed .navbar-collapse.collapsing,
+.cid-rD0pXjj7qF .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rD0pXjj7qF .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rD0pXjj7qF .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rD0pXjj7qF .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rD0pXjj7qF .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rD0pXjj7qF .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rD0pXjj7qF .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rD0pXjj7qF .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rD0pXjj7qF .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rD0pXjj7qF .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rD0pXjj7qF .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rD0pXjj7qF .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rD0pXjj7qF .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rD0pXjj7qF .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rD0pXjj7qF .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rD0pXjj7qF .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rD0pXjj7qF .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rD0pXjj7qF img {
+    height: 3.8rem !important;
+  }
+  .cid-rD0pXjj7qF .btn {
+    display: -webkit-flex;
+  }
+  .cid-rD0pXjj7qF button.navbar-toggler {
+    display: block;
+  }
+  .cid-rD0pXjj7qF .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rD0pXjj7qF .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rD0pXjj7qF .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rD0pXjj7qF .navbar-collapse.collapsing,
+  .cid-rD0pXjj7qF .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rD0pXjj7qF .navbar-collapse.collapsing .navbar-nav,
+  .cid-rD0pXjj7qF .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rD0pXjj7qF .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rD0pXjj7qF .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rD0pXjj7qF .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rD0pXjj7qF .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rD0pXjj7qF .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rD0pXjj7qF .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rD0pXjj7qF .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rD0pXjj7qF .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rD0pXjj7qF .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rD0pXjj7qF .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rD0pXjj7qF .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rD0pXjj7qF .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rD0pXjj7qF .nav-link:hover,
+.cid-rD0pXjj7qF .dropdown-item:hover {
+  color: #c1c1c1 !important;
 }
