--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3928,6 +3928,65 @@ section.lazy-placeholder:after {
 .cid-rD0pXgozip H1 {
   text-align: center;
 }
+.cid-rE8Jr3xJrh {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rE8Jr3xJrh .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rE8Jr3xJrh .step {
+  width: 64px;
+  height: 64px;
+  font-size: 32px;
+  border-radius: 50%;
+  border: 2px solid #efefef;
+}
+@media (max-width: 767px) {
+  .cid-rE8Jr3xJrh .step {
+    width: 48px;
+    height: 48px;
+    font-size: 24px;
+  }
+}
+.cid-rE8Jr3xJrh .separline {
+  position: relative;
+}
+.cid-rE8Jr3xJrh .separline:after {
+  top: 68px;
+  left: 30px;
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: calc(100% - (32px + 4px) * 2);
+  background-color: #efefef;
+}
+@media (max-width: 767px) {
+  .cid-rE8Jr3xJrh .separline:after {
+    top: 52px;
+    left: 22px;
+    height: calc(100% - 56px);
+  }
+}
+.cid-rE8Jr3xJrh .media-block {
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+@media (min-width: 992px) {
+  .cid-rE8Jr3xJrh .media-block {
+    padding-right: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rE8Jr3xJrh .media-block {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+    padding-bottom: 2rem;
+  }
+}
 .cid-rD0pXhYWmE {
   background: #232323;
   padding-top: 60px;
@@ -4402,8 +4461,8 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rkfuOyiGUR {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-image: url("../../../assets/images/iot-environmental-1440x900.png");
 }
 .cid-rkfuOyiGUR H1 {
