create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3667,6 +3667,12 @@ section.lazy-placeholder:after {
 .cid-rE4FTJ3fhj H1 {
   text-align: center;
 }
+.cid-rXc9CFMtNz {
+  background-image: url("../../../assets/images/smartmockups-k79kychs-2000x1332.jpg");
+}
+.cid-rXc9CFMtNz H1 {
+  text-align: center;
+}
 .cid-rD0pXf4q73 {
   padding-top: 90px;
   padding-bottom: 60px;
@@ -4274,33 +4280,33 @@ section.lazy-placeholder:after {
 .cid-rkfuOyiGUR H1 {
   text-align: center;
 }
-.cid-rflNPHw76J {
+.cid-rYZmHqGbon {
   padding-top: 75px;
   padding-bottom: 90px;
   background-image: url("../../../assets/images/night-road-sky-2000x1125.jpg");
 }
-.cid-rflNPHw76J .media-container-column {
+.cid-rYZmHqGbon .media-container-column {
   align-items: center;
   -webkit-align-items: center;
 }
-.cid-rflNPHw76J .mbr-author-desc {
+.cid-rYZmHqGbon .mbr-author-desc {
   display: block;
 }
-.cid-rflNPHw76J .mbr-testimonial {
+.cid-rYZmHqGbon .mbr-testimonial {
   flex-basis: auto;
   margin-top: 5rem;
   -webkit-flex-basis: auto;
 }
-.cid-rflNPHw76J .mbr-testimonial .panel-item {
+.cid-rYZmHqGbon .mbr-testimonial .panel-item {
   background-color: #879a9f;
   background: linear-gradient(#879a9f, transparent);
 }
-.cid-rflNPHw76J .mbr-testimonial .card-block {
+.cid-rYZmHqGbon .mbr-testimonial .card-block {
   -webkit-flex-grow: 0;
   flex-grow: 0;
   padding: 2rem;
 }
-.cid-rflNPHw76J .mbr-testimonial .card-block .testimonial-photo {
+.cid-rYZmHqGbon .mbr-testimonial .card-block .testimonial-photo {
   margin-top: -5rem;
   display: inline-block;
   width: 120px;
@@ -4309,15 +4315,15 @@ section.lazy-placeholder:after {
   overflow: hidden;
   border-radius: 50%;
 }
-.cid-rflNPHw76J .mbr-testimonial .card-block .testimonial-photo img {
+.cid-rYZmHqGbon .mbr-testimonial .card-block .testimonial-photo img {
   width: 100%;
   min-width: 100%;
   min-height: 100%;
 }
-.cid-rflNPHw76J .mbr-testimonial .card-block p {
+.cid-rYZmHqGbon .mbr-testimonial .card-block p {
   margin: 0;
 }
-.cid-rflNPHw76J .mbr-testimonial .card-footer {
+.cid-rYZmHqGbon .mbr-testimonial .card-footer {
   padding: 0 2rem 2rem 2rem;
   border-top: 0;
   word-wrap: break-word;
@@ -4325,24 +4331,25 @@ section.lazy-placeholder:after {
   background: none;
 }
 @media (max-width: 260px) {
-  .cid-rflNPHw76J .testimonial-photo {
+  .cid-rYZmHqGbon .testimonial-photo {
     width: 100% !important;
     height: auto !important;
   }
 }
-.cid-rflNPHw76J B {
+.cid-rYZmHqGbon B {
   color: #ffffff;
 }
-.cid-rflNPHw76J .mbr-section-subtitle {
+.cid-rYZmHqGbon .mbr-section-subtitle {
   color: #ffffff;
 }
-.cid-rflNPHw76J H2 {
+.cid-rYZmHqGbon H2 {
   color: #efefef;
 }
-.cid-rD0creTfIb {
-  padding-top: 120px;
-  padding-bottom: 120px;
-  background-image: url("../../../assets/images/phone-mockup.jpg");
+.cid-rXb981o0jC {
+  background-image: url("../../../assets/images/smartmockups-k79kychs-2000x1332.jpg");
+}
+.cid-rXb981o0jC H1 {
+  text-align: center;
 }
 .cid-rfrBvK4GTA {
   padding-top: 135px;
