create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4280,70 +4280,11 @@ section.lazy-placeholder:after {
 .cid-rkfuOyiGUR H1 {
   text-align: center;
 }
-.cid-rYZmHqGbon {
-  padding-top: 75px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/night-road-sky-2000x1125.jpg");
+.cid-s6ZPCmGgZG {
+  background-image: url("../../../assets/images/smartmockups-k79kychs-2000x1332.jpg");
 }
-.cid-rYZmHqGbon .media-container-column {
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-rYZmHqGbon .mbr-author-desc {
-  display: block;
-}
-.cid-rYZmHqGbon .mbr-testimonial {
-  flex-basis: auto;
-  margin-top: 5rem;
-  -webkit-flex-basis: auto;
-}
-.cid-rYZmHqGbon .mbr-testimonial .panel-item {
-  background-color: #879a9f;
-  background: linear-gradient(#879a9f, transparent);
-}
-.cid-rYZmHqGbon .mbr-testimonial .card-block {
-  -webkit-flex-grow: 0;
-  flex-grow: 0;
-  padding: 2rem;
-}
-.cid-rYZmHqGbon .mbr-testimonial .card-block .testimonial-photo {
-  margin-top: -5rem;
-  display: inline-block;
-  width: 120px;
-  height: 120px;
-  margin-bottom: 1.6rem;
-  overflow: hidden;
-  border-radius: 50%;
-}
-.cid-rYZmHqGbon .mbr-testimonial .card-block .testimonial-photo img {
-  width: 100%;
-  min-width: 100%;
-  min-height: 100%;
-}
-.cid-rYZmHqGbon .mbr-testimonial .card-block p {
-  margin: 0;
-}
-.cid-rYZmHqGbon .mbr-testimonial .card-footer {
-  padding: 0 2rem 2rem 2rem;
-  border-top: 0;
-  word-wrap: break-word;
-  word-break: break-word;
-  background: none;
-}
-@media (max-width: 260px) {
-  .cid-rYZmHqGbon .testimonial-photo {
-    width: 100% !important;
-    height: auto !important;
-  }
-}
-.cid-rYZmHqGbon B {
-  color: #ffffff;
-}
-.cid-rYZmHqGbon .mbr-section-subtitle {
-  color: #ffffff;
-}
-.cid-rYZmHqGbon H2 {
-  color: #efefef;
+.cid-s6ZPCmGgZG H1 {
+  text-align: center;
 }
 .cid-rfrBvK4GTA {
   padding-top: 135px;
